--- a/public/14-step-2.html
+++ b/public/14-step-2.html
@@ -277,9 +277,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="row justify-content-center">
+					<div class="row justify-content-center bottom-button">
 						<div class="col-lg-5">
-							<div class="form-wrap bottom-button">
+							<div class="form-wrap">
 								<button class="form-wrap__btn" type="submit">Перейти к подтверждению заказа
 								</button>
 							</div>
